# ChamRisk

./: README.md
assets/: report_template.odt
crates/core/: Cargo.toml
crates/core/src/: lib.rs  risk.rs  zypper.rs
crates/core/src/ai/: config.rs  mod.rs  provider.rs  secrets.rs
crates/core/src/models/: legacy.rs  mod.rs  reconcile.rs  run_log.rs  triage.rs
crates/core/src/services/: reconciler.rs
crates/core/tests/: ai_config.rs  reconcile.rs  risk.rs  zypper_parse.rs
crates/core/tests/fixtures/: packages.xml  search_packages_min.xml  zypper_table.txt  (+1 more)
crates/ops/: Cargo.toml
crates/ops/src/: ai.rs  ai_secrets.rs  api.rs  events.rs  lib.rs  provider_registry.rs  report_export.rs  report_model.rs  report_store.rs  runner.rs  system_workbook.rs  tasks.rs
crates/ops/src/ai/providers/: anthropic.rs  openai.rs
crates/ops/src/health/: checks.rs  filesystem.rs  mod.rs  pulse.rs  system_info.rs
crates/ops/tests/: ai.rs  report_export.rs  report_model.rs  report_store.rs  runner.rs
crates/ops/tests/fixtures/anthropic/: malformed_model_list.json  malformed_triage.json  model_list_success.json  triage_success.json
crates/ui/: Cargo.toml
crates/ui/src/: about.rs  ai_settings.rs  app.rs  branding.rs  legal_ui.rs  lib.rs  main.rs  settings.rs  ui_text.rs
crates/ui/src/about/: ai_disclaimer.txt  disclaimer.txt  license_summary.txt  third_party.txt
crates/ui/src/tabs/: mod.rs  tab_about.rs  tab_btrfs.rs  tab_health.rs  tab_package.rs  tab_reports.rs  tab_settings.rs  tab_triage.rs
crates/ui/tests/: ai.rs  app.rs  btrfs.rs  updates.rs  wiring.rs
