[package]
name = "chamrisk-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
chamrisk-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
num_cpus = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
quick-xml = "0.31"
uuid = { version = "1", features = ["v4"] }
zip = "0.6"


[lib]
name = "chamrisk_ops"
path = "src/lib.rs"

[dev-dependencies]
